Fix for auto margin on container for search on mobile

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -33,4 +33,7 @@
   .form_width{
     width: 200px;
   }
+  .kill-mx-auto{
+    margin-left: 0 !important;
+  }
 }
